# open-plx

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/projects/-home-cyuan-projects/memory/: reference_arrow_adbc_rs.md
.github/workflows/: ci.yml
config/: open-plx.yaml  permissions.yaml
config/dashboards/: company-financials.yaml  demo.yaml  full-demo.yaml  github.yaml  hackernews.yaml  showcase.yaml
config/data_sources/: boxplot-demo.yaml  company-financials-flight.yaml  company-financials.yaml  demo-static.yaml  financials-summary.yaml  funnel-demo.yaml  gauge-demo.yaml  gh-by-language.yaml  gh-language-treemap.yaml  gh-license-dist.yaml  gh-stars-forks.yaml  gh-summary.yaml  gh-top-owners.yaml  gh-top-repos.yaml  heatmap-demo.yaml  histogram-demo.yaml  hn-by-hour.yaml  hn-by-type.yaml  hn-by-weekday.yaml  hn-domain-treemap.yaml  hn-stories-by-month.yaml  hn-summary.yaml  hn-title-words.yaml  hn-top-authors.yaml  hn-top-domains.yaml  hn-top-stories.yaml  hn-type-radar.yaml  radar-demo.yaml  sankey-demo.yaml  scatter-demo.yaml  table-demo.yaml  treemap-demo.yaml  wordcloud-demo.yaml
config/seed/: init.sql  mysql-init.sql  postgres-init.sql
crates/open-plx-auth/: Cargo.toml
crates/open-plx-auth/src/: lib.rs
crates/open-plx-cli/: Cargo.toml
crates/open-plx-cli/src/: export.rs  import.rs  main.rs  manifest.rs  output.rs  validate.rs
crates/open-plx-config/: Cargo.toml
crates/open-plx-config/src/: convert.rs  lib.rs  loader.rs  model.rs  static_data.rs
crates/open-plx-core/: Cargo.toml  build.rs
crates/open-plx-core/src/: lib.rs
crates/open-plx-server/: Cargo.toml
crates/open-plx-server/src/: flight_sql_client.rs  grpc_proxy_client.rs  lib.rs  main.rs  state.rs
crates/open-plx-server/src/services/: dashboard.rs  data_source.rs  flight.rs  health.rs  mod.rs  widget_action.rs  widget_data.rs
crates/open-plx-server/tests/: flight_sql_integration.rs
docs/: architecture.md  auth.md  code-quality-findings.md  codelabs.md  data-format.md  declarative-layout.md  design.md  exploration-open-plx.md  index.md  phases.md  table-enhancement-design.md  table-enhancement-impl.md  table-enhancement-review.md  table-enhancement.md  tasks.md  widget-expansion-impl.md  widget-expansion.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/e2e/: dashboard-list.spec.ts  dashboard.spec.ts  full-demo.spec.ts  helpers.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: DashboardGrid.tsx  WidgetErrorBoundary.tsx  WidgetShell.tsx
frontend/src/components/variables/: VariableBar.tsx  VariableControl.tsx
frontend/src/components/widgets/: BarChartWidget.tsx  BoxPlotWidget.tsx  FunnelWidget.tsx  G2Chart.tsx  GaugeWidget.tsx  GraphWidget.tsx  HeatmapWidget.tsx  HistogramWidget.tsx  LineChartWidget.tsx  MetricCardWidget.tsx  PieChartWidget.tsx  PivotTableWidget.tsx  RadarChartWidget.tsx  S2PivotTable.tsx  S2Table.tsx  SankeyWidget.tsx  ScatterChartWidget.tsx  TableWidget.tsx  TextWidget.tsx  TreemapWidget.tsx  WidgetRegistry.tsx  WordCloudWidget.tsx
frontend/src/hooks/: useDashboard.ts  useDashboardList.ts  useThemeContext.ts  useVariables.ts  useWidgetData.ts
frontend/src/pages/: DashboardListPage.tsx  DashboardPage.tsx
frontend/src/services/: evaluateVisibility.ts  testRegistry.ts
frontend/src/services/grpc/: client.ts  transport.ts
frontend/src/services/mappers/: chartMapper.ts  conditionMapper.ts  funnelMapper.ts  gaugeMapper.ts  graphMapper.ts  pivotMapper.ts  sankeyMapper.ts  tableMapper.ts  treemapMapper.ts  wordCloudMapper.ts
proto/: buf.gen.yaml
proto/open_plx/v1/: action.proto  dashboard.proto  data.proto  data_source.proto  widget_spec.proto
tools/: crawl_github.py  crawl_hn.py  export_github_csv.py  export_hn_csv.py  verify_hn.py
