[workspace]
members = [
    "crates/open-plx-core",
    "crates/open-plx-config",
    "crates/open-plx-auth",
    "crates/open-plx-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.13"
tonic-web = "0.13"
prost = "0.13"
prost-types = "0.13"

# gRPC build
tonic-build = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
