[workspace]
members = [
    "crates/open-plx-core",
    "crates/open-plx-config",
    "crates/open-plx-auth",
    "crates/open-plx-server",
    "crates/open-plx-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.14"
tonic-web = "0.14"
prost = "0.14"
prost-types = "0.14"

# gRPC build
tonic-build = "0.14"
tonic-prost-build = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
