[package]
name = "open-plx-auth"
description = "Stateless authentication for open-plx (JWT, API key, dev mode)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
open-plx-config = { path = "../open-plx-config" }
tonic.workspace = true
uuid.workspace = true
tracing.workspace = true
