[package]
name = "open-plx-core"
description = "Generated proto types and core domain logic for open-plx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true
