[package]
name = "open-plx-core"
description = "Generated proto types and core domain logic for open-plx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost = "0.14"

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true
