[package]
name = "open-plx-server"
description = "gRPC server for open-plx dashboard platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
open-plx-core = { path = "../open-plx-core" }
open-plx-config = { path = "../open-plx-config" }
open-plx-auth = { path = "../open-plx-auth" }
tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tonic-reflection = "0.14"
arrow-flight = "58.0.0"
arrow-array = "58.0.0"
arrow-schema = "58.0.0"
arrow-ipc = "58.0.0"
futures = "0.3.32"
