[package]
name = "open-plx-server"
description = "gRPC server for open-plx dashboard platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
open-plx-core = { path = "../open-plx-core" }
open-plx-config = { path = "../open-plx-config" }
open-plx-auth = { path = "../open-plx-auth" }
tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tonic-reflection = "0.14"
tonic-health = "0.14"
arrow-flight = { version = "58.0.0", features = ["flight-sql"] }
arrow-array = "58.0.0"
arrow-schema = "58.0.0"
arrow-cast = "58.0.0"
arrow-select = "58.0.0"
futures = "0.3.32"
serde_yaml.workspace = true

[dev-dependencies]
